Fixed navbar on mobile not expanding / collapsing

--- a/assets/styles/_theme.sass
+++ b/assets/styles/_theme.sass
@@ -1,3 +1,4 @@
 $primary: #079dd3
+$secondary: #e3681c
 
 @import "bootstrap/bootstrap.scss"
